Use record.sample_rate for recording on SNDCTL_DSP_SPEED. Fix PR lib/54667.